feat: big upd for routes protection & movies search

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,5 @@
 @import url(./components/Button/Button.css);
 
 @import url(./components/ErrorPopup/ErrorPopup.css);
+
+@import url(./components/Profile/Profile.css);
