--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -15,6 +15,7 @@
 
 .form__label_type_loggedin {
   margin: 0;
+  padding: 0 0 0 5px;
   font-weight: 500;
   font-size: 11px;
   line-height: 13px;
@@ -25,7 +26,7 @@
 
 .form__input {
   margin: 0;
-  padding: 0;
+  padding: 0 5px;
   height: 32px;
   max-width: 396px;
   width: 100%;
@@ -40,7 +41,7 @@
 
 .form__input:hover {
   box-shadow: 5px 5px 20px rgba(50, 248, 139, 0.288);
-  transition: box-shadow .5s linear;
+  transition: box-shadow .3s linear;
   border-radius: 10px;
   cursor: pointer;
 }
@@ -111,6 +112,10 @@
   opacity: 0.7;
   cursor: pointer;
   transition: opacity .5s ease-in-out;
+}
+
+.form__input_hidden {
+  display: none;
 }
 
 @media (max-width: 690px) {
