--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -33,6 +33,7 @@
   font-size: 15px;
   line-height: 18px;
   color: #000000;
+  max-width: 290px;
 }
 
 .card__duration {
@@ -44,11 +45,21 @@
   color: #A0A0A0;
 }
 
+.card__link {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  max-width: 360px;
+  width: 100%;
+  height: 190px;
+}
+
 .card__image {
   margin: 0;
   padding: 0;
   max-width: 360px;
   width: 100%;
+  height: 190px;
 }
 
 @media (max-width: 1020px) {
@@ -59,7 +70,11 @@
 
   .card__image {
     max-width: 342px;
-    min-height: 190px;
+    height: 190px;
+  }
+
+  .card__title {
+    max-width: 260px;
   }
 }
 
@@ -70,7 +85,12 @@
   }
 
   .card__image {
-    min-height: 168px;
+    height: 168px;
+    box-sizing: border-box;
+  }
+
+  .card__link {
+    height: 168px;
   }
 
   .card__title {
