--- a/src/components/FormInput/FormInput.css
+++ b/src/components/FormInput/FormInput.css
@@ -73,13 +73,17 @@
 }
 
 .form__error {
-  display: none;
+  display: flex;
   margin: 0;
   padding: 0;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
   color: #EE3465;
+}
+
+.form__error:valid {
+  display: none;
 }
 
 .form__input_place_movies {
