--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -65,6 +65,10 @@
   color: #000;
 }
 
+.button_place_movies-hidden {
+  display: none;
+}
+
 .button_place_movies:hover {
   box-shadow: 5px 5px 20px rgba(46, 46, 46, 0.308);
   transition: box-shadow 1s linear;
